[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "UniverseOptimizer"
version = "0.1.0"
description = "Universe Optimizer Project"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["utils*", "BaseAgent*", "JobRunner*", "UniverseOptimizer*"]
